Переработка дизайна Open API
1. Объединил person.yaml и task.yaml в один файл openapi.yaml по причине того что описание Open API сервиса лучше локализовывать в одном файле
