# src/main/resources/openapi/openapi.yaml
@@ -78,7 +78,36 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '../task/model/tasks_response.json'
+                $ref: 'model/tasks_response.json'
+        404:
+          description: Not Found
+        400:
+          description: Bad Request
+        401:
+          description: Unauthorized
+        403:
+          description: Forbidden
+
+  /tasks/{taskId}:
+    get:
+      tags:
+        - Task
+      description: Получение задачи по id
+      operationId: get-task-by-id
+      parameters:
+        - name: taskId
+          in: path
+          required: true
+          schema:
+            type: string
+          description: Идентификатор задачи
+      responses:
+        200:
+          description: Успешный ответ
+          content:
+            application/json:
+              schema:
+                $ref: 'model/task_response.json'
         404:
           description: Not Found
         400:
